--- a/elyreacts/public/index.html
+++ b/elyreacts/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+        <title>ElyWalls</title>
+        <link rel="icon" href="%PUBLIC_URL%/Logo.svg" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
@@ -10,7 +11,6 @@
             content="Web site created using create-react-app"
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
         <link
             rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
