--- a/elyreacts/public/index.html
+++ b/elyreacts/public/index.html
@@ -11,10 +11,6 @@
             content="Web site created using create-react-app"
         />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
-        />
 
         <link
             href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&display=swap"
@@ -25,7 +21,10 @@
             rel="stylesheet"
         />
         <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="root"></div>
+
+        <link rel="stylesheet"   href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"  />
+  
+      <div id="root"></div>
         <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
